text color change

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      
      <div class="banner">
         <div class="navbar">
-            <h1>ZAR</h1>
+            <h1 style="color: rebeccapurple;">ZAR</h1>
             <li class="navbarUl" >
                 <ul>Home</ul>
                 <ul>About</ul>
